# pullnix

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_tests.txt  sonar-project.properties  update_requirements
.github/workflows/: build.yml
src/pullnix/: cli.py  config.py  repository.py
tests/: test_cli.py  test_config.py  test_repository.py
